test/functions/operatorOverloads/operatorMethods/nestedMethodBad.good
nestedMethodBad.chpl:14: In function 'main':
nestedMethodBad.chpl:19: error: unresolved call '+(R, R)'
$CHPL_HOME/modules/internal/String.chpl:391: note: this candidate did not match: +(x: bufferType, y: byteIndex)
nestedMethodBad.chpl:19: note: because actual argument #1 with type 'R'
$CHPL_HOME/modules/internal/String.chpl:391: note: is passed to formal 'x: c_ptr(uint(8))'
nestedMethodBad.chpl:19: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:1948: note:   +(a: uint(64), b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:1949: note:   +(a: int(64), b: uint(64))
note: and 95 other candidates, use --print-all-candidates to see them
